@@ -15,9 +15,6 @@ import greencity.dto.achievement.UserAchievementVO;
 import greencity.dto.achievementcategory.AchievementCategoryDto;
 import greencity.dto.achievementcategory.AchievementCategoryTranslationDto;
 import greencity.dto.achievementcategory.AchievementCategoryVO;
-import greencity.dto.advice.AdvicePostDto;
-import greencity.dto.advice.AdviceTranslationVO;
-import greencity.dto.advice.AdviceVO;
 import greencity.dto.breaktime.BreakTimeDto;
 import greencity.dto.category.CategoryDto;
 import greencity.dto.category.CategoryVO;
@@ -31,12 +28,8 @@ import greencity.dto.econews.EcoNewsGenericDto;
 import greencity.dto.econews.EcoNewsVO;
 import greencity.dto.econews.EcoNewsViewDto;
 import greencity.dto.econews.UpdateEcoNewsDto;
-import greencity.dto.econewscomment.AddEcoNewsCommentDtoRequest;
-import greencity.dto.econewscomment.AddEcoNewsCommentDtoResponse;
-import greencity.dto.econewscomment.AmountCommentLikesDto;
+import greencity.dto.comment.AmountCommentLikesDto;
 import greencity.dto.econewscomment.EcoNewsCommentAuthorDto;
-import greencity.dto.econewscomment.EcoNewsCommentDto;
-import greencity.dto.econewscomment.EcoNewsCommentVO;
 import greencity.dto.event.AddEventDtoRequest;
 import greencity.dto.event.AddressDto;
 import greencity.dto.event.EventAttenderDto;
@@ -118,7 +111,6 @@ import greencity.dto.tag.TagUaEnDto;
 import greencity.dto.tag.TagVO;
 import greencity.dto.tag.TagViewDto;
 import greencity.dto.user.EcoNewsAuthorDto;
-import greencity.dto.user.HabitIdRequestDto;
 import greencity.dto.user.UserFilterDtoRequest;
 import greencity.dto.user.UserFilterDtoResponse;
 import greencity.dto.user.UserManagementVO;
@@ -133,14 +125,13 @@ import greencity.dto.useraction.UserActionVO;
 import greencity.dto.verifyemail.VerifyEmailVO;
 import greencity.entity.Achievement;
 import greencity.entity.AchievementCategory;
-import greencity.entity.Advice;
 import greencity.entity.BreakTime;
 import greencity.entity.Category;
 import greencity.entity.Comment;
 import greencity.entity.CustomShoppingListItem;
 import greencity.entity.DiscountValue;
 import greencity.entity.EcoNews;
-import greencity.entity.EcoNewsComment;
+import greencity.entity.VerifyEmail;
 import greencity.entity.FactOfTheDay;
 import greencity.entity.FactOfTheDayTranslation;
 import greencity.entity.FavoritePlace;
@@ -164,13 +155,11 @@ import greencity.entity.User;
 import greencity.entity.UserAchievement;
 import greencity.entity.UserAction;
 import greencity.entity.UserShoppingListItem;
-import greencity.entity.VerifyEmail;
 import greencity.entity.event.Address;
 import greencity.entity.event.Event;
 import greencity.entity.event.EventComment;
 import greencity.entity.event.EventDateLocation;
 import greencity.entity.event.EventGrade;
-import greencity.entity.localization.AdviceTranslation;
 import greencity.entity.localization.ShoppingListItemTranslation;
 import greencity.entity.localization.TagTranslation;
 import greencity.enums.ArticleType;
@@ -636,12 +625,12 @@ public class ModelUtils {
 
     public static Language getLanguage() {
         return new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList());
+            Collections.emptyList());
     }
 
     public static Language getLanguageUa() {
         return new Language(2L, "ua", Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList());
+            Collections.emptyList());
     }
 
     public static EcoNews getEcoNews() {
@@ -649,16 +638,25 @@ public class ModelUtils {
         tag.setTagTranslations(
             List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
                 TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
-        return new EcoNews(1L, zonedDateTime, TestConst.SITE, "source", "shortInfo", getUser(),
-            "title", "text", false,
-            List.of(EcoNewsComment.builder().status(CommentStatus.ORIGINAL).id(1L).text("test").build()),
-            Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
+        return EcoNews.builder()
+            .id(1L)
+            .creationDate(zonedDateTime)
+            .imagePath(TestConst.SITE)
+            .source("source")
+            .shortInfo("shortInfo")
+            .author(getUser())
+            .title("title")
+            .text("text")
+            .hidden(false)
+            .tags(Collections.singletonList(tag))
+            .build();
     }
 
-    public static EcoNewsComment getEcoNewsComment(CommentStatus commentStatus) {
-        return EcoNewsComment.builder()
+    public static Comment getEcoNewsComment(CommentStatus commentStatus) {
+        return Comment.builder()
             .status(commentStatus)
             .text("sdfs")
+            .articleType(ArticleType.ECO_NEWS)
             .build();
     }
 
@@ -668,23 +666,18 @@ public class ModelUtils {
             List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
                 TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
         return new EcoNews(1L, ZonedDateTime.now(), TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text", false,
-            List.of(getEcoNewsComment(CommentStatus.EDITED),
-                getEcoNewsComment(CommentStatus.ORIGINAL),
-                getEcoNewsComment(CommentStatus.DELETED),
-                getEcoNewsComment(CommentStatus.DELETED)),
-            Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
+            "title", "text", false, Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
     }
 
     public static EcoNews getEcoNewsForFindDtoByIdAndLanguage() {
         return new EcoNews(1L, null, TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text", false, null, Collections.singletonList(getTag()), Collections.emptySet(),
+            "title", "text", false, Collections.singletonList(getTag()), Collections.emptySet(),
             Collections.emptySet());
     }
 
     public static EcoNewsVO getEcoNewsVO() {
         return new EcoNewsVO(1L, zonedDateTime, TestConst.SITE, null, getUserVO(),
-            "title", "text", null, Collections.emptySet(), Collections.singletonList(getTagVO()),
+            "title", "text", Collections.emptySet(), Collections.singletonList(getTagVO()),
             Collections.emptySet());
     }
 
@@ -693,7 +686,7 @@ public class ModelUtils {
             .id(2L)
             .language(
                 new Language(2L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(), Collections.emptyList(),
-                    Collections.emptyList(), Collections.emptyList()))
+                    Collections.emptyList()))
             .shoppingListItem(
                 new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
             .content("Buy a bamboo toothbrush")
@@ -705,7 +698,7 @@ public class ModelUtils {
             .id(1L)
             .language(
                 new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(), Collections.emptyList(),
-                    Collections.emptyList(), Collections.emptyList()))
+                    Collections.emptyList()))
             .shoppingListItem(
                 new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
             .content("Buy a bamboo toothbrush")
@@ -1017,7 +1010,7 @@ public class ModelUtils {
             ShoppingListItemTranslation.builder()
                 .id(2L)
                 .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                    Collections.emptyList(), Collections.emptyList()))
                 .content("Buy a bamboo toothbrush")
                 .shoppingListItem(
                     new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
@@ -1025,7 +1018,7 @@ public class ModelUtils {
             ShoppingListItemTranslation.builder()
                 .id(11L)
                 .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                    Collections.emptyList(), Collections.emptyList()))
                 .content("Start recycling batteries")
                 .shoppingListItem(
                     new ShoppingListItem(4L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
@@ -1277,109 +1270,15 @@ public class ModelUtils {
         return socialNetworkVO;
     }
 
-    public static AddEcoNewsCommentDtoResponse getAddEcoNewsCommentDtoResponse() {
-        return AddEcoNewsCommentDtoResponse.builder()
-            .id(getEcoNewsComment().getId())
-            .author(getEcoNewsCommentAuthorDto())
-            .text(getEcoNewsComment().getText())
-            .modifiedDate(getEcoNewsComment().getModifiedDate())
-            .build();
-    }
-
-    public static EcoNewsComment getEcoNewsComment() {
-        return EcoNewsComment.builder()
+    public static Comment getEcoNewsComment() {
+        return Comment.builder()
             .id(1L)
             .status(CommentStatus.ORIGINAL)
             .text("text")
             .createdDate(LocalDateTime.now())
             .modifiedDate(LocalDateTime.now())
             .user(getUser())
-            .ecoNews(getEcoNews())
-            .build();
-    }
-
-    public static EcoNewsCommentVO getEcoNewsCommentVOWithoutParentWithData() {
-        return EcoNewsCommentVO.builder()
-            .id(278L)
-            .user(UserVO.builder()
-                .id(13L)
-                .role(Role.ROLE_ADMIN)
-                .name("name")
-                .build())
-            .modifiedDate(LocalDateTime.now())
-            .text("I find this topic very useful!")
-            .status(CommentStatus.ORIGINAL)
-            .currentUserLiked(true)
-            .createdDate(LocalDateTime.of(2020, 11, 7, 12, 42))
-            .usersLiked(new HashSet<>(Arrays.asList(
-                UserVO.builder()
-                    .id(76L)
-                    .build(),
-                UserVO.builder()
-                    .id(543L)
-                    .build(),
-                UserVO.builder()
-                    .id(349L)
-                    .build())))
-            .ecoNews(EcoNewsVO.builder()
-                .id(32L)
-                .build())
-            .build();
-    }
-
-    public static EcoNewsCommentVO getEcoNewsCommentVOWithParentWithData() {
-        return EcoNewsCommentVO.builder()
-            .id(278L)
-            .user(UserVO.builder()
-                .id(13L)
-                .role(Role.ROLE_ADMIN)
-                .name("name")
-                .build())
-            .modifiedDate(LocalDateTime.now())
-            .text("I find this topic very useful!")
-            .parentComment(EcoNewsCommentVO.builder()
-                .id(277L)
-                .user(UserVO.builder()
-                    .id(13L)
-                    .role(Role.ROLE_ADMIN)
-                    .name("name")
-                    .build())
-                .modifiedDate(LocalDateTime.now())
-                .text("I find this topic very useful!")
-                .status(CommentStatus.ORIGINAL)
-                .currentUserLiked(true)
-                .parentComment(null)
-                .createdDate(LocalDateTime.of(2020, 11, 7, 12, 42))
-                .usersLiked(new HashSet<>(Arrays.asList(
-                    UserVO.builder()
-                        .id(76L)
-                        .build(),
-                    UserVO.builder()
-                        .id(543L)
-                        .build(),
-                    UserVO.builder()
-                        .id(349L)
-                        .build())))
-                .ecoNews(EcoNewsVO.builder()
-                    .id(32L)
-                    .build())
-                .build())
-            .status(CommentStatus.ORIGINAL)
-            .currentUserLiked(true)
-            .createdDate(LocalDateTime.of(2020, 11, 7, 12, 42))
-            .usersLiked(new HashSet<>(Arrays.asList(
-                UserVO.builder()
-                    .id(76L)
-                    .build(),
-                UserVO.builder()
-                    .id(543L)
-                    .build(),
-                UserVO.builder()
-                    .id(349L)
-                    .build())))
-            .ecoNews(EcoNewsVO.builder()
-                .id(32L)
-                .build())
+            .articleType(ArticleType.ECO_NEWS)
             .build();
     }
 
@@ -1388,23 +1287,6 @@ public class ModelUtils {
             .id(getUser().getId())
             .name(getUser().getName().trim())
             .userProfilePicturePath(getUser().getProfilePicturePath())
-            .build();
-    }
-
-    public static AddEcoNewsCommentDtoRequest getAddEcoNewsCommentDtoRequest() {
-        return new AddEcoNewsCommentDtoRequest("text", 0L);
-    }
-
-    public static EcoNewsCommentDto getEcoNewsCommentDto() {
-        return EcoNewsCommentDto.builder()
-            .id(1L)
-            .modifiedDate(LocalDateTime.now())
-            .author(getEcoNewsCommentAuthorDto())
-            .text("text")
-            .replies(0)
-            .likes(0)
-            .currentUserLiked(false)
-            .status(CommentStatus.ORIGINAL)
             .build();
     }
 
@@ -1446,15 +1328,6 @@ public class ModelUtils {
         return new PlaceCommentRequestDto("comment", null, null);
     }
 
-    public static AdviceTranslation getAdviceTranslation() {
-        return AdviceTranslation.builder()
-            .id(1L)
-            .language(getLanguage())
-            .content("Text content")
-            .advice(getAdvice())
-            .build();
-    }
-
     public static OpeningHours getOpeningHours() {
         OpeningHours openingHoursTest = new OpeningHours();
         openingHoursTest.setOpenTime(getLocalTime());
@@ -1476,36 +1349,11 @@ public class ModelUtils {
             .build();
     }
 
-    public static List<AdviceTranslation> getAdviceTranslations() {
-        Language defaultLanguage = getLanguage();
-        return new ArrayList<>(Arrays.asList(
-            AdviceTranslation.builder().id(1L).language(defaultLanguage).content("hello").build(),
-            AdviceTranslation.builder().id(2L).language(defaultLanguage).content("text").build(),
-            AdviceTranslation.builder().id(3L).language(defaultLanguage).content("smile").build()));
-    }
-
-    public static List<AdviceTranslationVO> getAdviceTranslationVOs() {
-        LanguageVO defaultLanguage = getLanguageVO();
-        return new ArrayList<>(Arrays.asList(
-            AdviceTranslationVO.builder().id(1L).language(defaultLanguage).content("hello").build(),
-            AdviceTranslationVO.builder().id(2L).language(defaultLanguage).content("text").build(),
-            AdviceTranslationVO.builder().id(3L).language(defaultLanguage).content("smile").build()));
-    }
-
     public static List<LanguageTranslationDTO> getLanguageTranslationsDTOs() {
         return Arrays.asList(
             new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "hello"),
             new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "text"),
             new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "smile"));
-    }
-
-    public static List<Advice> getAdvices() {
-        List<AdviceTranslation> adviceTranslations = getAdviceTranslations();
-        return new ArrayList<>(Arrays.asList(
-            Advice.builder().id(1L).habit(Habit.builder().id(1L).build())
-                .translations(adviceTranslations).build(),
-            Advice.builder().id(2L).habit(Habit.builder().id(1L).build()).translations(adviceTranslations).build(),
-            Advice.builder().id(3L).habit(Habit.builder().id(1L).build()).translations(adviceTranslations).build()));
     }
 
     public static Habit getHabit() {
@@ -1571,24 +1419,6 @@ public class ModelUtils {
             .image("image")
             .habitTranslations(null)
             .build();
-    }
-
-    public static Advice getAdvice() {
-        return Advice.builder().id(1L)
-            .translations(getAdviceTranslations())
-            .habit(getHabit())
-            .build();
-    }
-
-    public static AdviceVO getAdviceVO() {
-        return AdviceVO.builder().id(1L)
-            .translations(getAdviceTranslationVOs())
-            .habit(new HabitIdRequestDto(1L))
-            .build();
-    }
-
-    public static AdvicePostDto getAdvicePostDto() {
-        return new AdvicePostDto(getLanguageTranslationsDTOs(), new HabitIdRequestDto(1L));
     }
 
     public static Achievement getAchievement() {
@@ -1674,12 +1504,6 @@ public class ModelUtils {
     public static SearchNewsDto getSearchNewsDto() {
         return new SearchNewsDto(1L, "title", getEcoNewsAuthorDto(), ZonedDateTime.now(),
             Collections.singletonList("tag"));
-    }
-
-    public static EcoNewsCommentVO getEcoNewsCommentVO() {
-        return new EcoNewsCommentVO(1L, "text", LocalDateTime.now(), LocalDateTime.now(), new EcoNewsCommentVO(),
-            new ArrayList<>(), getUserVO(), getEcoNewsVO(),
-            false, new HashSet<>(), CommentStatus.ORIGINAL);
     }
 
     public static EcoNewsDtoManagement getEcoNewsDtoManagement() {
@@ -2851,7 +2675,7 @@ public class ModelUtils {
                 .description("")
                 .habitItem("")
                 .language(new Language(1L, "en", Collections.emptyList(), Collections.emptyList(),
-                    Collections.emptyList(), Collections.emptyList()))
+                    Collections.emptyList()))
                 .build()))
             .build();
     }
